apps/dev/trilium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  namespace: trilium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      #terminationGracePeriodSeconds: 20
      containers:
      - name: main
        image: "triliumnext/trilium:v0.104.0"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tools
          mountPath: /tools
          readOnly: true
        - name: data
          mountPath: /home/node/trilium-data/
      - name: backup
        image: "triliumnext/trilium:v0.104.0"
        command: ["/bin/sh","-x","-c","exec tail -f /dev/null"]
        volumeMounts:
        - name: tools
          mountPath: /tools
          readOnly: true
        - name: data
          mountPath: /home/node/trilium-data/
          readOnly: true
        - name: restic-conf
          mountPath: /restic-conf
          readOnly: true
      volumes:
      - name: tools
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: trilium
      - name: restic-conf
        secret:
          secretName: restic-conf
          items:
          - key: password
            path: password.txt
