apps/dev/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: ${NAMESPACE}
spec:
  selector:
    app: trilium
  ports:
  - port: 8080
    targetPort: 8080
