apps/dev/trilium/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APPNAME}
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: https-443
    namespace: kube-system
    sectionName: https
  hostnames:
  - "${HOSTNAME}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ${APPNAME}
      port: 8080
